--- a/TicTacToeProject/TicTacToeProject.csproj
+++ b/TicTacToeProject/TicTacToeProject.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="bunit.core" Version="1.2.49" />
+  </ItemGroup>
+
 </Project>
